cmake_minimum_required(VERSION 4.1)
project(ws144)

set(CMAKE_CXX_STANDARD 14)

include_directories(lgpio)
include_directories(lgpio/DOC/HTML/EXAMPLES/lgpio)
include_directories(lgpio/DOC/HTML/EXAMPLES/rgpio)
include_directories(lgpio/EXAMPLES/lgpio)
include_directories(src)
include_directories(src/Config)
include_directories(src/Fonts)
include_directories(src/GUI)
include_directories(src/LCD)

add_executable(ws144
        lgpio/DOC/HTML/EXAMPLES/lgpio/28BYJ_48.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/bench.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/chipline.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/dhtxx.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/lg_ads1x15.h
        lgpio/DOC/HTML/EXAMPLES/lgpio/lg_mcp3008.h
        lgpio/DOC/HTML/EXAMPLES/lgpio/lg_mcp3202.h
        lgpio/DOC/HTML/EXAMPLES/lgpio/lg_mcp4131.h
        lgpio/DOC/HTML/EXAMPLES/lgpio/lgl_ads1x15.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/lgl_mcp3008.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/lgl_mcp3202.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/lgl_mcp4131.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/monitor.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/NRF24.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/rotary_encoder.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/sonar_ranger.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/tx_pulse.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/tx_servo.c
        lgpio/DOC/HTML/EXAMPLES/lgpio/tx_wave.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/28BYJ_48.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/bench.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/chipline.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/dhtxxd.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/DS18B20.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/errors.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/files.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/lg_ads1x15.h
        lgpio/DOC/HTML/EXAMPLES/rgpio/lg_mcp3008.h
        lgpio/DOC/HTML/EXAMPLES/rgpio/lg_mcp3202.h
        lgpio/DOC/HTML/EXAMPLES/rgpio/lg_mcp4131.h
        lgpio/DOC/HTML/EXAMPLES/rgpio/lg_mcp4251.h
        lgpio/DOC/HTML/EXAMPLES/rgpio/lgr_ads1x15.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/lgr_mcp3008.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/lgr_mcp3202.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/lgr_mcp4131.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/lgr_mcp4251.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/monitor.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/NRF24.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/rotary_encoder.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/sonar_ranger.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/tx_pulse.c
        lgpio/DOC/HTML/EXAMPLES/rgpio/tx_wave.c
        lgpio/EXAMPLES/lgpio/28BYJ_48.c
        lgpio/EXAMPLES/lgpio/bench.c
        lgpio/EXAMPLES/lgpio/chipline.c
        lgpio/EXAMPLES/lgpio/dhtxx.c
        lgpio/EXAMPLES/lgpio/lg_ads1x15.h
        lgpio/EXAMPLES/lgpio/lg_mcp3008.h
        lgpio/EXAMPLES/lgpio/lg_mcp3202.h
        lgpio/EXAMPLES/lgpio/lg_mcp4131.h
        lgpio/EXAMPLES/lgpio/lgl_ads1x15.c
        lgpio/EXAMPLES/lgpio/lgl_mcp3008.c
        lgpio/EXAMPLES/lgpio/lgl_mcp3202.c
        lgpio/EXAMPLES/lgpio/lgl_mcp4131.c
        lgpio/EXAMPLES/lgpio/monitor.c
        lgpio/EXAMPLES/lgpio/NRF24.c
        lgpio/EXAMPLES/lgpio/rotary_encoder.c
        lgpio/EXAMPLES/lgpio/sonar_ranger.c
        lgpio/EXAMPLES/lgpio/tx_pulse.c
        lgpio/EXAMPLES/lgpio/tx_servo.c
        lgpio/EXAMPLES/lgpio/tx_wave.c
        lgpio/EXAMPLES/rgpio/28BYJ_48.c
        lgpio/EXAMPLES/rgpio/bench.c
        lgpio/EXAMPLES/rgpio/chipline.c
        lgpio/EXAMPLES/rgpio/dhtxxd.c
        lgpio/EXAMPLES/rgpio/DS18B20.c
        lgpio/EXAMPLES/rgpio/errors.c
        lgpio/EXAMPLES/rgpio/files.c
        lgpio/EXAMPLES/rgpio/lg_ads1x15.h
        lgpio/EXAMPLES/rgpio/lg_mcp3008.h
        lgpio/EXAMPLES/rgpio/lg_mcp3202.h
        lgpio/EXAMPLES/rgpio/lg_mcp4131.h
        lgpio/EXAMPLES/rgpio/lg_mcp4251.h
        lgpio/EXAMPLES/rgpio/lgr_ads1x15.c
        lgpio/EXAMPLES/rgpio/lgr_mcp3008.c
        lgpio/EXAMPLES/rgpio/lgr_mcp3202.c
        lgpio/EXAMPLES/rgpio/lgr_mcp4131.c
        lgpio/EXAMPLES/rgpio/lgr_mcp4251.c
        lgpio/EXAMPLES/rgpio/monitor.c
        lgpio/EXAMPLES/rgpio/NRF24.c
        lgpio/EXAMPLES/rgpio/rotary_encoder.c
        lgpio/EXAMPLES/rgpio/sonar_ranger.c
        lgpio/EXAMPLES/rgpio/tx_pulse.c
        lgpio/EXAMPLES/rgpio/tx_wave.c
        lgpio/PY_LGPIO/lgpio.i
        lgpio/lgCfg.c
        lgpio/lgCfg.h
        lgpio/lgCmd.c
        lgpio/lgCmd.h
        lgpio/lgCtx.c
        lgpio/lgCtx.h
        lgpio/lgDbg.c
        lgpio/lgDbg.h
        lgpio/lgErr.c
        lgpio/lgExec.c
        lgpio/lgFile.c
        lgpio/lgGpio.c
        lgpio/lgGpio.h
        lgpio/lgHdl.c
        lgpio/lgHdl.h
        lgpio/lgI2C.c
        lgpio/lgMD5.c
        lgpio/lgMD5.h
        lgpio/lgNotify.c
        lgpio/lgpio.h
        lgpio/lgPthAlerts.c
        lgpio/lgPthAlerts.h
        lgpio/lgPthSocket.c
        lgpio/lgPthTx.c
        lgpio/lgPthTx.h
        lgpio/lgScript.c
        lgpio/lgSerial.c
        lgpio/lgSPI.c
        lgpio/lgThread.c
        lgpio/lgUtil.c
        lgpio/rgpio.c
        lgpio/rgpio.h
        lgpio/rgpiod.c
        lgpio/rgpiod.h
        lgpio/rgs.c
        src/Config/Debug.h
        src/Config/DEV_Config.cc
        src/Config/DEV_Config.h
        src/Fonts/font12.cc
        src/Fonts/font12CN.cc
        src/Fonts/font16.cc
        src/Fonts/font20.cc
        src/Fonts/font24.cc
        src/Fonts/font24CN.cc
        src/Fonts/font48.cc
        src/Fonts/font50.cc
        src/Fonts/font8.cc
        src/Fonts/fonts.h
        src/GUI/GUI_BMP.cc
        src/GUI/GUI_BMP.h
        src/GUI/GUI_Paint.cc
        src/GUI/GUI_Paint.h
        src/GUI/KEY_APP.cc
        src/GUI/KEY_APP.h
        src/LCD/LCD_1in44.cc
        src/LCD/LCD_1in44.h
        src/addon.cc
        src/addon.h
        src/device.cc
        src/device.h
        src/display.cc
        src/display.h
        src/keys.cc
        src/keys.h)
